--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,2 +1,3 @@
 <title>File Metadata</title>
+<link rel="stylesheet" href="css/main.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
